@@ -7,10 +7,11 @@ recommend to update to a current version whenever possible.
 
 On regular basis the following versions of **phpwcms** are supported:
 
-| Version   | Supported          |
-|-----------| ------------------ |
-| &gt;= 1.9.33 | :white_check_mark: |
-| &lt; 1.9.33  | :x:                |
+| Version      | Supported          |
+|--------------| ------------------ |
+| &gt;= 1.10.2 | :white_check_mark: |
+| &gt;= 1.9.38 | :white_check_mark: |
+| &lt; 1.9.38  | :x:                |
 
 ## Reporting a Vulnerability
 
