@@ -9,6 +9,6 @@
  *
  **/
 
-const PHPWCMS_VERSION = '1.10.2-dev';
-const PHPWCMS_RELEASE_DATE = '2024/01/01';
+const PHPWCMS_VERSION = '1.10.3-dev';
+const PHPWCMS_RELEASE_DATE = '2024/01/06';
 const PHPWCMS_REVISION = '554';
