@@ -3,7 +3,7 @@
         'name' => '__root__',
         'pretty_version' => 'dev-master',
         'version' => 'dev-master',
-        'reference' => 'fb44255ade05eadbc30f96efaeedd915b3606d00',
+        'reference' => '4f57948d7cb55b84a180c2fd7e8a9dd23a3c21a2',
         'type' => 'library',
         'install_path' => __DIR__ . '/../../../',
         'aliases' => array(),
@@ -13,7 +13,7 @@
         '__root__' => array(
             'pretty_version' => 'dev-master',
             'version' => 'dev-master',
-            'reference' => 'fb44255ade05eadbc30f96efaeedd915b3606d00',
+            'reference' => '4f57948d7cb55b84a180c2fd7e8a9dd23a3c21a2',
             'type' => 'library',
             'install_path' => __DIR__ . '/../../../',
             'aliases' => array(),
@@ -110,9 +110,9 @@
             'dev_requirement' => false,
         ),
         'netcarver/textile' => array(
-            'pretty_version' => 'v4.0.0',
-            'version' => '4.0.0.0',
-            'reference' => '79b7d5102816ff017a940d8695a35d7f8db1e60a',
+            'pretty_version' => 'v4.1.0',
+            'version' => '4.1.0.0',
+            'reference' => '3b2fa182bcc0fc63c4bad6d948762a38c2cd9616',
             'type' => 'library',
             'install_path' => __DIR__ . '/../netcarver/textile',
             'aliases' => array(),
