@@ -11,7 +11,7 @@ Additions and fixes Copyright (c) 2010    Stef Dawson       https://stefdawson.c
 Additions and fixes Copyright (c) 2010-17 Netcarver         https://github.com/netcarver
 Additions and fixes Copyright (c) 2011    Jeff Soo          http://ipsedixit.net/
 Additions and fixes Copyright (c) 2012    Robert Wetzlmayr  https://wetzlmayr.com/
-Additions and fixes Copyright (c) 2012-19 Jukka Svahn       https://rahforum.biz/
+Additions and fixes Copyright (c) 2012-24 Jukka Svahn       https://rahforum.biz/
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
